--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,14 @@
 {
+    "name": "guias-program/php-dotenv",
+    "description": "A simple library to load environment variables from a .env file",
     "require": {
         "vlucas/phpdotenv": "^5.6"
-    }
+    },
+    "license": "proprietary",
+    "authors": [
+        {
+            "name": "Jeimy Jara",
+            "email": "jjara@imporfactorylatam.com"
+        }
+    ]
 }
