--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-HOST=localhost
-USER=imporsuitpro_guias
-PASSWORD=imporsuit_pro_guias
-DB=imporsuitpro_guias
-CHARSET=utf8
+HOST=
+USER=
+PASSWORD=
+DB=
+CHARSET=
