--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "guias-program/php-dotenv",
     "description": "A simple library to load environment variables from a .env file",
     "require": {
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "dompdf/dompdf": "^3.0"
     },
     "license": "proprietary",
     "authors": [
