--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "description": "A simple library to load environment variables from a .env file",
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "dompdf/dompdf": "^3.0"
+        "dompdf/dompdf": "^3.0",
+        "setasign/fpdi": "^2.6",
+        "tecnickcom/tcpdf": "^6.7"
     },
     "license": "proprietary",
     "authors": [
