--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "vlucas/phpdotenv": "^5.6",
         "dompdf/dompdf": "^3.0",
         "setasign/fpdi": "^2.6",
-        "tecnickcom/tcpdf": "^6.7"
+        "tecnickcom/tcpdf": "^6.7",
+        "picqer/php-barcode-generator": "^3.1"
     },
     "license": "proprietary",
     "authors": [
