--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "dompdf/dompdf": "^3.0",
         "setasign/fpdi": "^2.6",
         "tecnickcom/tcpdf": "^6.7",
-        "picqer/php-barcode-generator": "^3.0.0"
+        "picqer/php-barcode-generator": "3.0.0"
     },
     "license": "proprietary",
     "authors": [
