--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,12 @@
     "name": "guias-program/php-dotenv",
     "description": "A simple library to load environment variables from a .env file",
     "require": {
-        "vlucas/phpdotenv": "^5.6",
-        "dompdf/dompdf": "^3.0",
-        "setasign/fpdi": "^2.6",
-        "tecnickcom/tcpdf": "^6.7",
-           "picqer/php-barcode-generator": "^2.4"
+        "php": "^8.0",
+        "vlucas/phpdotenv": "^5.3",
+        "dompdf/dompdf": "^2.0",
+        "setasign/fpdi": "^2.3",
+        "tecnickcom/tcpdf": "^6.4",
+        "picqer/php-barcode-generator": "^2.2"
     },
     "license": "proprietary",
     "authors": [
